fixed a z-index problem

--- a/src/sass/_page.scss
+++ b/src/sass/_page.scss
@@ -3,6 +3,7 @@
 	margin: 0 auto;
 	max-width: em(1830px, $default-font-size);
 	position: relative;
+	z-index: 30;
 
 	@include breakpoint(1830px) {
 		max-width: em(1600px);
